--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Change Background Color Assignment</title>
+    <title>Change Background Color</title>
 </head>
 <body>
     <h1>Click anywhere on the and change the color.</h1>
